# src/modules/auth/auth.routes.ts
@@ -1,6 +1,7 @@
 import { asyncHandler } from '@/utils/async-handler'
 import { Router } from 'express'
 import loginController from './controllers/login.controller'
+import refreshTokenController from './controllers/refresh-token.controller'
 import registerController from './controllers/register.controller'
 
 export default (app: Router): Router => {
@@ -12,6 +13,9 @@ export default (app: Router): Router => {
 
 	/* Login */
 	router.post('/login', asyncHandler(loginController))
+
+	/* Refresh token */
+	router.post('/refresh-token', asyncHandler(refreshTokenController))
 
 	return router
 }
