# src/modules/auth/dtos/refresh-token.response.ts
@@ -1,0 +1,16 @@
+/**
+ * @swagger
+ * components:
+ *   schemas:
+ *     RefreshTokenResponse:
+ *       type: object
+ *       properties:
+ *         accessToken:
+ *           type: string
+ *         refreshToken:
+ *           type: string
+ */
+export class RefreshTokenResponse {
+	accessToken: string
+	refreshToken: string
+}
